remove unused env variable for builder